# rust-web

./: Cargo.toml
src/: main.rs
src/data/: mod.rs  responses.rs
src/data/user/: handlers.rs  mod.rs  service.rs  user.rs
