[package]
name = "untitled"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = { version = "0.19.7", features = ["with-chrono-0_4"] }
serde = "1.0.195"
serde_json = "1.0.111"
serde_derive = "1.0.195"
rand = "0.8.5"
data-encoding = "2.5.0"
chrono = "0.4"